First card boceto

--- a/core/templates/dashboard.html
+++ b/core/templates/dashboard.html
@@ -1,7 +1,7 @@
 <div class="dashboard">
     <a href="{% url 'home' %}"> 🏠 Home </a>
     <a href="{% url 'packs' %}">🏀 Packs </a>
-    <a href="#">⚔️ Duel </a>
+    <a href="{% url 'duel' %}">⚔️ Duel </a>
     <a href="#">🤝 Trade </a>
     <a href="#">🃏 Collection</a>
     <a href="#">⚙️ Settings</a>
