--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -24,7 +24,9 @@
   {% endif %}
 
   <script src="{% static 'js/main.js' %}"></script>
+  <script src="{% static 'js/nba-card.js' %}" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  
 
   {% block extra_js %}{% endblock %}
 </body>
