LOGOS IMGS AND CARD HOLOGRAFIC

--- a/core/templates/duel.html
+++ b/core/templates/duel.html
@@ -6,9 +6,9 @@
 <nba-card
 number="1"
 name="LeBron James"
-rarity="rare"
+rarity="legendary"
 image="/static/imgs/players/lebron.jpg"
-team-logo="/static/imgs/logos/lakers.png"
+team-logo="/static/imgs/logos/LosAngelesLakers.png"
 border1= "#22276b",
 border2= "#cba91b"
 >
