--- a/core/templates/dashboard.html
+++ b/core/templates/dashboard.html
@@ -3,7 +3,7 @@
     <a href="{% url 'packs' %}">🏀 Packs </a>
     <a href="{% url 'duel' %}">⚔️ Duel </a>
     <a href="#">🤝 Trade </a>
-    <a href="#">🃏 Collection</a>
+    <a href="{% url 'collection' %}">🃏 Collection</a>
     <a href="#">⚙️ Settings</a>
     <a href="{% url 'logout' %}">🚪 Logout</a>
   </div>
