--- a/core/templates/duel.html
+++ b/core/templates/duel.html
@@ -5,12 +5,13 @@
 {% block content %}
 <nba-card
 number="1"
-name="LeBron James"
+name=""
 rarity="legendary"
-image="/static/imgs/players/lebron.jpg"
-team-logo="/static/imgs/logos/LosAngelesLakers.png"
+image="/static/imgs/players/questionmark.avif"
+team-logo="/static/imgs/logos/questionmark.png"
 border1= "#22276b",
-border2= "#cba91b"
+border2= "#cba91b",
+holo
 >
 </nba-card>
 
