--- a/core/templates/packs.html
+++ b/core/templates/packs.html
@@ -46,7 +46,44 @@
     <button id="open-pack" class="btn btn-primary mt-4">
       Abrir Pack
     </button>
-  
+
+
+
+    <!-- PACK OPEN MODAL -->
+    <div class="modal fade " id="packModal" tabindex="-1">
+      <div class="modal-dialog modal-xl modal-dialog-centered" style="max-width: 1400px;">
+        <div class="modal-content bg-dark text-light">
+
+          <div class="modal-header border-secondary">
+            <h5 class="modal-title">🎁 Pack abierto</h5>
+            <button type="button" class="btn-close btn-close-white"
+                    data-bs-dismiss="modal"></button>
+          </div>
+
+          <div class="modal-body">
+
+            <!-- contenedor cartas -->
+            <div id="pack-cards" class="d-flex justify-content-center flex-wrap gap-4">
+              <!-- JS inserta cartas acá -->
+
+            </div>
+
+          </div>
+
+          <div class="modal-footer border-secondary">
+            <button class="btn btn-secondary"
+                    data-bs-dismiss="modal">
+              Cerrar
+            </button>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+
+
+
 </div>
     
 
