--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -5,27 +5,31 @@
   <meta charset="UTF-8">
   <title>{% block title %}NBA TCG{% endblock %}</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  
 
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   {% block extra_css %}{% endblock %}
 </head>
 <body>
 
-  <!-- MAIN CONTENT -->
-  <main> 
-    <div class="container vh-100 d-flex justify-content-center align-items-center">
-        {% block content %}{% endblock %}
-    </div>
-  </main>
+ <!-- MAIN CONTENT (scrollable) -->
+ <div class="main-scroll">
+  <div class="container h-100 d-flex justify-content-center align-items-center">
+    {% block content %}{% endblock %}
+  </div>
+</div>
+
 
   <!-- DASHBOARD (only if logged in) -->
   {% if user.is_authenticated %}
     {% include "dashboard.html" %}
   {% endif %}
 
-  <script src="{% static 'js/main.js' %}"></script>
+  <script src="{% static 'js/utils.js' %}"></script>
   <script src="{% static 'js/nba-card.js' %}" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
   
 
   {% block extra_js %}{% endblock %}
