--- a/core/templates/collection.html
+++ b/core/templates/collection.html
@@ -4,11 +4,12 @@
 
 {% block content %}
 
-<div class="collection-wrapper">
-
-    <div id="collection-grid"></div>
-
-</div>
+<div class="album-wrapper">
+    <div class="album-page">
+      <div id="collection-grid"></div>
+    </div>
+  </div>
+  
 <script id="collection-data" type="application/json">
     {{ collection }}
 </script>
