--- a/core/templates/dashboard.html
+++ b/core/templates/dashboard.html
@@ -2,7 +2,7 @@
     <a href="{% url 'home' %}"> 🏠 Home </a>
     <a href="{% url 'packs' %}">🏀 Packs </a>
     <a href="{% url 'duel' %}">⚔️ Duel </a>
-    <a href="#">🤝 Trade </a>
+    <a href="{% url 'trade' %}">🤝 Trade </a>
     <a href="{% url 'collection' %}">🃏 Collection</a>
     <a href="#">⚙️ Settings</a>
     <a href="{% url 'logout' %}">🚪 Logout</a>
