--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -34,7 +34,7 @@ body.nba-bg {
 body {
   margin: 0;
   height: 100vh;
-  overflow: hidden; /* ← evita scroll global */
+  overflow: hidden;
 
   background: radial-gradient(circle at top, #1d428a, #22127e);
   font-family: 'Segoe UI', sans-serif;
@@ -88,34 +88,114 @@ body {
 
 /* =================================== COLLECTION =================================== */
 
-.collection-wrapper {
-
-  height: calc(100vh - 60px); /* dashboard space */
+.album-wrapper {
+  height: calc(100vh - 60px);
   overflow-y: auto;
+  overflow-x: hidden;
+  border-radius: 25px;  
   padding: 20px;
 
+  background: linear-gradient(145deg, #1b1b1b, #101010);
+}
+
+
+
+.album-wrapper::-webkit-scrollbar {
+  width: 12px;
+}
+
+.album-wrapper::-webkit-scrollbar-track {
+  background: #111;
+  border-radius: 10px;
+}
+
+.album-wrapper::-webkit-scrollbar-thumb {
+  background: linear-gradient(#444, #777);
+  border-radius: 10px;
+}
+
+.album-wrapper::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(#666, #aaa);
+}
+
+.album-page {
+  max-width: 1100px;
+  margin: auto;
+
+  background: linear-gradient(145deg, #2a2a2a, #1e1e1e);
+  border-radius: 18px;
+  padding: 25px;
+
+  box-shadow:
+    inset 0 0 20px rgba(0,0,0,0.6),
+    0 10px 30px rgba(0,0,0,0.5);
 }
 
 #collection-grid {
-
   display: grid;
-  gap: 20px;
-  justify-content: center;
 
   grid-template-columns: repeat(4, 240px);
+  gap: 20px;
+
+  justify-content: center;
+}
+.collection-wrapper {
+  height: calc(100vh - 60px);
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: 16px;
 }
 
-/* tablet */
-@media (max-width: 1200px) {
+/* RESPONSIVE TEST porque el CONTAINER NO ANDA */
+@media (max-width: 992px) {
   #collection-grid {
-    grid-template-columns: repeat(3, 240px);
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 576px) {
+  #collection-grid {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
-/* mobile */
-@media (max-width: 768px) {
-  #collection-grid {
-    grid-template-columns: repeat(2, 240px);
-  }
+
+/* PARA PODER HACER EL HOVER Y QUE SUBA esto lo epudO BRORAR */
+.album-slot {
+  width: 240px;
+  height: 340px;
+
+  border-radius: 12px;
+
+  background: linear-gradient(145deg, #151515, #0f0f0f) !important;
+
+  box-shadow:
+    inset 0 0 10px rgba(255,255,255,0.05),
+    inset 0 0 20px rgba(0,0,0,0.8) !important;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  transition: 0.2s;
 }
 
+.album-slot:hover {
+  transform: translateY(-7px);
+}
+
+
+/* =================================== TRADES =================================== */
+
+table {
+  border-collapse: collapse;
+  width: 50%;
+  margin: 20px;
+}
+th, td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+th {
+  background-color: #f2f2f2;
+}
