--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -14,7 +14,7 @@
 
  <!-- MAIN CONTENT (scrollable) -->
  <div class="main-scroll">
-  <div class="container h-100 d-flex justify-content-center align-items-center">
+  <div class="container">
     {% block content %}{% endblock %}
   </div>
 </div>
