--- a/core/templates/packs.html
+++ b/core/templates/packs.html
@@ -6,7 +6,9 @@
 
 
 {% block content %}
-<div class="packs-view text-center">
+
+<div class="container h-100 d-flex justify-content-center align-items-center">
+  <div class="packs-view text-center ">
     <div id="packsCarousel" class="carousel slide" data-bs-interval="false">
         
       <div class="carousel-inner">
@@ -84,6 +86,7 @@
 
 
 
+</div>
 </div>
     
 
